Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.5.0-rc1
-
Windows 7 64 bit
Description
- Start Creator with parameter -presentationMode.
- Press some shortcuts.
The shortcuts are shown in the middle of Creator's window, but they are written on top of each other, leading to confusing mixtures:
The displayed shortcuts should not mix. The simplest way seems to be to only show the latest shortcut. A more fancy option would be to display something like a stack of the latest shortcuts, one above the other on the y-axis.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-15371 presentationMode: "end of file" indicator can be invisible
- Closed
For Gerrit Dashboard: QTCREATORBUG-14805 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
140186,3 | Fix that there could be many "fading indicators" painted over each other | 3.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |