Fix that there could be many "fading indicators" painted over each other

Simply hide the current indicator, if there is any.

Task-number: QTCREATORBUG-14805
Change-Id: Ic25ba1b671e6ba2490803ba73b8a5757ccbff24b
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>